modified:   TODO.txt

--- a/TODO.txt
+++ b/TODO.txt
@@ -8,3 +8,6 @@
 8. 有一个排名系统, 里面列出用户排名(活跃程度), tag排名(哪个tag底下的paste多), paste排名(哪个paste访问多和评论多), syntax排名(哪个syntax下面的paste多)
 9. 登录用户可以评论paste
 10. 根据多种规则做RSS. 可以按用户, syntax, tag, 日期
+11. 加入输出的选择, 当没有任何参数的时候, 表示是在页面内输出；如果有参数,
+根据参数选择输出样式, 比如embed=True的时候, 只输出代码块,
+如果theme=XXX的时候, 根据XXX来设置代码的主题
